# Living-World-CPP

LivingWorld/: CMakeLists.txt  Living_World.cpp
LivingWorld/Animals/: Sheep.cpp  Sheep.h  Wolf.cpp  Wolf.h
LivingWorld/Plants/: Dandelion.cpp  Dandelion.h  Grass.cpp  Grass.h  Toadstool.cpp  Toadstool.h
LivingWorld/Utils/: Position.cpp  World.cpp  World.h
LivingWorld/Virtual/: Animal.cpp  Animal.h  Organism.cpp  Organism.h  Plant.cpp  Plant.h
